src/test/ui/structs/issue-92010-update-ice.stderr
error[E0308]: mismatched types
  --> $DIR/issue-92010-update-ice.rs:11:43
   |
LL |     fn y(&self, y: f64) -> Self { P{y, .. self.clone() } }
   |                                           ^^^^^^^^^^^^ expected struct `P`, found `&P<T>`
   |
   = note: expected struct `P<T>`
           found reference `&P<T>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
